--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,5 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 serde_yaml = "0.9.34"
 tokio = { version = "1.44.0", features = ["full"] }
-tower-http = { version = "0.6.2", features = ["fs"] }
+tower-http = { version = "0.6.2", features = ["fs", "set-header"] }
 uuid = { version = "1.16.0", features = ["v4"] }
