--- a/front/package.json
+++ b/front/package.json
@@ -22,7 +22,9 @@
     "@kobalte/core": "0.13.10",
     "@solid-primitives/i18n": "^2.2.1",
     "@solidjs/router": "0.15.3",
+    "class-variance-authority": "^0.7.1",
     "echarts": "^5.6.0",
-    "solid-js": "1.9.5"
+    "solid-js": "1.9.5",
+    "tailwind-merge": "^3.3.1"
   }
 }
