--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,7 @@ base_path: /ai
 secret_key: your_secret_key
 password_salt: jKnDj%pNoJerZGPA&AG7Rwuwo&8tC6QW
 jwt_secret: uCK6g1EBERjj2U7FT8sGlMFFzL2M3ufW
+# api_key_jwt_secret: another_secret_key
 db_url: storage/database.db
 # db_url: postgres://user:pass@host:port/schema_name
 # db_url: mysql://user:pass@host:port/database_name
