--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cyder-api"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 
 [dependencies]
@@ -11,6 +11,7 @@ chrono = "0.4.40"
 chrono-tz = "0.10.3"
 cyder-tools = { version = "0.1.2", features = ["auth"] }
 diesel = { version = "2.2.8", features = ["64-column-tables", "postgres", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"] }
+diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres", "sqlite"] }
 diesel_migrations = "2.2.0"
 flate2 = "1.1.0"
 futures = "0.3.31"
