--- a/front/package.json
+++ b/front/package.json
@@ -11,20 +11,22 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@tailwindcss/vite": "4.1.4",
-    "solid-devtools": "0.34.2",
-    "tailwindcss": "4.1.4",
-    "typescript": "5.8.3",
-    "vite": "^6.3.5",
-    "vite-plugin-solid": "2.11.6"
+    "@tailwindcss/vite": "4.1.16",
+    "@tanstack/router-plugin": "^1.133.36",
+    "solid-devtools": "0.34.4",
+    "tailwindcss": "4.1.16",
+    "typescript": "5.9.3",
+    "vite": "7.1.12",
+    "vite-plugin-solid": "2.11.10"
   },
   "dependencies": {
-    "@kobalte/core": "0.13.10",
-    "@solid-primitives/i18n": "^2.2.1",
-    "@solidjs/router": "0.15.3",
-    "class-variance-authority": "^0.7.1",
-    "echarts": "^5.6.0",
-    "solid-js": "1.9.5",
-    "tailwind-merge": "^3.3.1"
+    "@kobalte/core": "0.13.11",
+    "@solid-primitives/i18n": "2.2.1",
+    "@tanstack/solid-query": "5.90.6",
+    "@tanstack/solid-router": "1.134.1",
+    "class-variance-authority": "0.7.1",
+    "echarts": "6.0.0",
+    "solid-js": "1.9.10",
+    "tailwind-merge": "3.3.1"
   }
 }
