--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 async-stream = "0.3.6"
+async-trait = "0.1"
 axum = { version = "0.8.4", features = ["macros"] }
+bincode = "1.3"
 bytes = "1.10.1"
 chrono = "0.4.42"
 chrono-tz = "0.10.4"
@@ -23,12 +25,18 @@ once_cell = "1.21.3"
 openssl = { version = "0.10.73", features = ["vendored"] }
 paste = "1.0.15"
 pq-sys = { version = "0.7.2", features = ["bundled"] }
+r2d2 = "0.8.10"
 rand = "0.9.2"
+redis = { version = "0.25.4" }
+bb8 = "0.8.3"
+bb8-redis = "0.15.0"
 reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "stream"], default-features = false}
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 serde_urlencoded = "0.7.1"
+serde_with = "3.16.1"
 serde_yaml = "0.9.34"
+sha2 = "0.10"
 struct-patch = "0.10.4"
 thiserror = "2.0.16"
 tokio = { version = "1.47.1", features = ["full"] }
