--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cyder-api"
-version = "0.3.2"
+version = "0.4.0"
 edition = "2021"
 
 [dependencies]
@@ -13,7 +13,7 @@ chrono = "0.4.42"
 chrono-tz = "0.10.4"
 cyder-tools = { version = "0.1.2", features = ["auth"] }
 dashmap = "6.1.0"
-diesel = { version = "2.2.12", features = ["64-column-tables", "postgres", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"] }
+diesel = { version = "2.2.12", features = ["64-column-tables", "postgres", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite", "serde_json"] }
 diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres", "sqlite"] }
 diesel_migrations = "2.2.0"
 flate2 = "1.1.2"
@@ -42,3 +42,7 @@ thiserror = "2.0.16"
 tokio = { version = "1.47.1", features = ["full"] }
 tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
 uuid = { version = "1.18.1", features = ["v4"] }
+aws-sdk-s3 = "1.121.0"
+aws-credential-types = "1.2.11"
+strum = { version = "0.27.2", features = ["derive"] }
+strum_macros = "0.27.2"
