--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,48 +1,45 @@
 [package]
 name = "cyder-api"
-version = "0.4.0"
-edition = "2021"
+version = "0.4.1"
+edition = "2024"
 
 [dependencies]
 async-stream = "0.3.6"
-async-trait = "0.1"
-axum = { version = "0.8.4", features = ["macros"] }
-bincode = "1.3"
-bytes = "1.10.1"
-chrono = "0.4.42"
+async-trait = "0.1.89"
+axum = { version = "0.8.8", features = ["macros"] }
+bincode = "2.0.1"
+bytes = "1.11.0"
+chrono = "0.4.43"
 chrono-tz = "0.10.4"
 cyder-tools = { version = "0.1.2", features = ["auth"] }
 dashmap = "6.1.0"
-diesel = { version = "2.2.12", features = ["64-column-tables", "postgres", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite", "serde_json"] }
+diesel = { version = "2.3.6", features = ["64-column-tables", "postgres", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite", "serde_json"] }
 diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres", "sqlite"] }
-diesel_migrations = "2.2.0"
-flate2 = "1.1.2"
+diesel_migrations = "2.3.1"
+flate2 = "1.1.8"
 futures = "0.3.31"
-futures-util = "0.3.31"
-jsonwebtoken = "9.3.1"
+jsonwebtoken = "10.3.0"
 libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
 once_cell = "1.21.3"
-openssl = { version = "0.10.73", features = ["vendored"] }
+openssl = { version = "0.10.75", features = ["vendored"] }
 paste = "1.0.15"
-pq-sys = { version = "0.7.2", features = ["bundled"] }
+pq-sys = { version = "0.7.5", features = ["bundled"] }
 r2d2 = "0.8.10"
 rand = "0.9.2"
-redis = { version = "0.25.4" }
-bb8 = "0.8.3"
-bb8-redis = "0.15.0"
+redis = "1.0.3"
+bb8 = "0.9.1"
+bb8-redis = "0.26.0"
 reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "stream"], default-features = false}
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.143"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
 serde_urlencoded = "0.7.1"
 serde_with = "3.16.1"
 serde_yaml = "0.9.34"
-sha2 = "0.10"
-struct-patch = "0.10.4"
-thiserror = "2.0.16"
-tokio = { version = "1.47.1", features = ["full"] }
-tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
-uuid = { version = "1.18.1", features = ["v4"] }
+sha2 = "0.10.9"
+thiserror = "2.0.18"
+tokio = { version = "1.49.0", features = ["full"] }
+tower-http = { version = "0.6.8", features = ["fs", "set-header"] }
+uuid = { version = "1.20.0", features = ["v4"] }
 aws-sdk-s3 = "1.121.0"
-aws-credential-types = "1.2.11"
 strum = { version = "0.27.2", features = ["derive"] }
 strum_macros = "0.27.2"
