refactor: request log fields, and usage calculate

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -43,3 +43,4 @@ uuid = { version = "1.20.0", features = ["v4"] }
 aws-sdk-s3 = "1.121.0"
 strum = { version = "0.27.2", features = ["derive"] }
 strum_macros = "0.27.2"
+json-patch = "4.1.0"
