--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "@tanstack/solid-router": "1.134.1",
     "class-variance-authority": "0.7.1",
     "echarts": "6.0.0",
+    "fast-json-patch": "^3.1.1",
     "solid-js": "1.9.10",
     "tailwind-merge": "3.3.1"
   }
