--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@kobalte/core": "0.13.11",
+    "@msgpack/msgpack": "^3.1.3",
     "@solid-primitives/i18n": "2.2.1",
     "@tanstack/solid-query": "5.90.6",
     "@tanstack/solid-router": "1.134.1",
