--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cyder-api"
-version = "0.4.1"
+version = "0.4.2"
 edition = "2024"
 
 [dependencies]
@@ -8,7 +8,7 @@ async-stream = "0.3.6"
 async-trait = "0.1.89"
 axum = { version = "0.8.8", features = ["macros"] }
 bincode = "2.0.1"
-bytes = "1.11.0"
+bytes = { version = "1.11.0", features = ["serde"] }
 chrono = "0.4.43"
 chrono-tz = "0.10.4"
 cyder-tools = { version = "0.1.2", features = ["auth"] }
@@ -18,7 +18,7 @@ diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres", "sqlite
 diesel_migrations = "2.3.1"
 flate2 = "1.1.8"
 futures = "0.3.31"
-jsonwebtoken = "10.3.0"
+jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
 libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
 once_cell = "1.21.3"
 openssl = { version = "0.10.75", features = ["vendored"] }
@@ -44,3 +44,7 @@ aws-sdk-s3 = "1.121.0"
 strum = { version = "0.27.2", features = ["derive"] }
 strum_macros = "0.27.2"
 json-patch = "4.1.0"
+rmp-serde = "1.3.1"
+
+[dev-dependencies]
+tempfile = "3.24.0"
