--- a/.github/workflows/master-auto-publish.yml
+++ b/.github/workflows/master-auto-publish.yml
@@ -15,6 +15,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    # Required: Initialize Docker Buildx to enable GHA cache export
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Log in to the GitHub Container Registry
       uses: docker/login-action@v3
       with:
@@ -28,5 +32,9 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
+        # Instructs Docker to pull cached layers from the GHA backend
+        cache-from: type=gha
+        # Instructs Docker to export all internal layers to the GHA backend
+        cache-to: type=gha,mode=max
         tags: |
           ghcr.io/${{ github.repository }}:${{ github.sha }}
